@@ -1,3 +1,9 @@
+hdparm-7.3
+	- fixed spelling of --drq-hsm-error in -h output
+	- fixed SG_IO CDB[2] bits for better SAT compliance
+	- fixed version number (v7.2 has "7.1" as version, doh!)
+	- added #ifdef around use of BLKGETSIZE64
+	- manpage updated
 hdparm-7.2
 	- tweak -C
 	- added more debug info from --verbose
